Name:                commutative
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            Using the type system to guarantee commutativity.

-- A longer description of the package.
-- Description:         

Homepage:            https://github.com/gelisam/commutative
License:             PublicDomain
Author:              Samuel Gélineau
Maintainer:          gelisam@gmail.com

Category:            Math

Build-type:          Simple
Cabal-version:       >=1.8

Extra-source-files:  README.md,
                     Makefile

Library
  hs-source-dirs: src
  
  Exposed-modules:     Control.Commutative
  -- Other-modules:       
  
  Build-depends:       base >= 4 && < 5,
                       profunctors >= 3.1.1 && < 4

executable commutative-demo
  build-depends:  base >= 4 && < 5,
                  commutative >= 0.1 && < 1
  main-is:        Main.hs
  hs-source-dirs: demo
